ori-k8s/main-service/dev.k3s/websocket-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service-dev
  namespace: dev
spec:
  selector:
    app: websocket-dev
  ports:
  - name: websocket
    port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
