ori-k8s/main-service/dev.k3s/ingress-dev.yaml
# ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gradsystem-ingress-dev
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/responseforwarding.flushinterval: "1ms"
    traefik.ingress.kubernetes.io/buffering.maxrequestbodybytes: "0"
    traefik.ingress.kubernetes.io/buffering.memrequestbodybytes: "0"
    traefik.ingress.kubernetes.io/request-timeout: "600s"

spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - studentdev.grading.software
    secretName: dev-grading-software-tls
  rules:
  - host: studentdev.grading.software
    http:
      paths:
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: websocket-service-dev
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gradsystem-service-dev
            port:
              number: 80
